ShortestJobFirst arrumado. Falta implementar processo do sistema.