@@ -1,4 +1,3 @@
-
 package Escalonador;
 
 import Processos.Processo;
@@ -12,40 +11,40 @@ import java.util.LinkedList;
 public class ShortestJobFirst {
 
     private boolean flag = false;
-    private int contador;
-    LinkedList<Processo> listaProcesso = null;
+    LinkedList<Processo> listaProcesso = new LinkedList();
     LinkedList<Processo> listaPronto = new LinkedList();
     LinkedList<Processo> listaBloqueado = new LinkedList();
     int tempo = 0;
+    Processo pSistema = new Processo();
 
     public void iniciar(LinkedList<Processo> listaProcesso) {
         this.listaProcesso = listaProcesso; // Lista de processos retirados do arquivo ordenados por ordem de chegada.
-        Processo pSistema = new Processo();
         pSistema.setTipo(Tipo.Sistema);
         escalonar();
     }
 
     public void escalonar() {
-        Processo processo = null;
+        Processo p_Executar;
 
         do {
 
             verificaListaProcessos();
-
+            if(flag == false && tempo %10 == 0){
+                executar(pSistema);
+            }
+            
             if (flag == false) {
                 if (!listaPronto.isEmpty()) {
-                    processo = menorTempoExecucao();
-                    if (processo != null) {
-                        flag = true;
+                    p_Executar = ShortestJob();
+                    flag = true;
+
+                    while (flag) {
+                        System.out.println("[" + tempo + "] [Executando] processo " + p_Executar.getId());
+                        executar(p_Executar);
+                        tempo++;
+                        verificaListaProcessos();
                     }
                 }
-            }
-
-            while (flag) {
-                verificaListaProcessos();
-                System.out.println("[Executando] Processo " + processo.getId());
-                executar(processo);
-                tempo++;
             }
 
             tempo++;
@@ -53,46 +52,16 @@ public class ShortestJobFirst {
 
     }
 
-    public Processo menorTempoExecucao() {
-        Processo p = listaPronto.get(0);
-        int menor = listaPronto.get(0).getDuracao();
+    public Processo ShortestJob() {
+        Processo p = listaPronto.getFirst();
 
-        for (int i = 0; i < this.listaPronto.size(); i++) {
+        for (int i = 0; i < listaPronto.size(); i++) {
             if (listaPronto.get(i).getDuracao() < p.getDuracao()) {
-                menor = listaPronto.get(i).getDuracao();
                 p = listaPronto.get(i);
             }
-
         }
 
         return p;
-    }
-
-    public void executar(Processo p) {
-        if (p.getTipo() == Tipo.Sistema) {
-            for (int i = listaBloqueado.size(); i > 0; i--) {
-                listaPronto.add(listaBloqueado.getFirst());
-                listaBloqueado.removeFirst();
-            }
-
-        }
-
-        if (!p.getListaES().isEmpty()) {
-            if (tempo == p.getListaES().getFirst()) {
-                listaBloqueado.add(p);
-                listaPronto.remove(p);
-            }
-        }
-
-        if (p.getDuracao() > 0) {
-            flag = true;
-            p.setDuracao(p.getDuracao() - 1);
-            if (p.getDuracao() == 0) {
-                listaPronto.remove(p);
-                System.out.println("[Término] Processo " + p.getId());
-                flag = false;
-            }
-        }
     }
 
     public void verificaListaProcessos() {
@@ -100,17 +69,38 @@ public class ShortestJobFirst {
             if (listaProcesso.getFirst().getTempo() == tempo) {
 
                 listaPronto.add(listaProcesso.getFirst());
-                System.out.println("[Chegada] Processo " + listaProcesso.getFirst().getId());
+                System.out.println("[" + tempo + "][Chegada] Processo " + listaProcesso.getFirst().getId());
                 listaProcesso.removeFirst();
 
             }
         }
     }
 
-    public void imprimir(LinkedList<Processo> x) {
-        for (int i = 0; i < x.size(); i++) {
-            System.out.println(x.get(i).toString());
+    public void executar(Processo p) {
+
+        if (p.getTipo().equals(Tipo.Sistema)) {
+            System.out.println("["+tempo+"][SISTEMA] Executando processo do sistema");
+            if (!listaBloqueado.isEmpty()) {
+                for (int i = listaBloqueado.size(); i > 0; i--) {
+                    listaPronto.add(listaBloqueado.getFirst());
+                    listaBloqueado.removeFirst();
+                }
+            }
+
+        } else if (!p.getListaES().isEmpty()) {
+            if (tempo == p.getListaES().getFirst()) {
+                listaBloqueado.add(p);
+                listaPronto.remove(p);
+            }
+        } else if (p.getDuracao() > 0) {
+            p.setDuracao(p.getDuracao() - 1);
+
+            if (p.getDuracao() == 0) {
+                System.out.println("[" + tempo + "] [Termino] Processo " + p.getId());
+                listaPronto.remove(p);
+                flag = false;
+            }
         }
+
     }
 }
-
